kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-project
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: final-project
  template:
    metadata:
      labels:
        app: final-project
    spec:
      containers:
      - name: final-project
        image: megzz22/final-project:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
